[package]
name = "dleq"
version = "0.0.0"
description = "Implementation of a Discrete Log Equality proof supporting a variety of curves"
license = "MIT"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1"
hex-literal = "0.3"

digest = "0.9"
sha2 = "0.9"
blake2 = "0.9"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

rand_core = "0.6"

curve25519-dalek = { version = "3.2", optional = true }

ff    = { version = "0.11", optional = true }
group = { version = "0.11", optional = true }
#k256   = { git = "https://github.com/RustCrypto/elliptic-curves", version = "0.10.0", optional = true }
#p256   = { git = "https://github.com/RustCrypto/elliptic-curves", version = "0.10.0", optional = true }
jubjub = { version = "0.8", optional = true }

secp256kfun = { version = "0.6", features = ["std"], default-features = false, optional = true }

thiserror = "1.0.30"

# Only used in log statements
hex = "0.4"
log = "0.4.8"

[dev-dependencies]
rand = "0.7"
env_logger = "0.9"

[features]
default = ["dalek-dleq", "secp256kfun-dleq", "serialize"]
# dleq appended due to later conflicts with dependency names
# Until namespaced features are available outside of nightly...
dalek-dleq = ["curve25519-dalek"]
ffgroup = ["ff", "group"]
#k256-dleq = ["elliptic-curve", "ffgroup", "k256"]
#p256-dleq = ["elliptic-curve", "ffgroup", "p256"]
jubjub-dleq = ["ffgroup", "jubjub"]
secp256kfun-dleq = ["secp256kfun"]
serialize = []
